--- a/index.html
+++ b/index.html
@@ -485,9 +485,9 @@
     <!-- Audio Element -->
     <audio id="music" loop preload="auto" autoplay style="display: none;">
         <!-- You'll need to replace this with a web-accessible URL -->
-        <source src="https://github.com/Arreezz/Araaaa/blob/main/a.mp3" type="audio/mpeg">
+        <source src="song/a.mp3" type="audio/mpeg">
         <!-- Fallback for local testing - replace with your file -->
-        <source src="https://github.com/Arreezz/Araaaa/blob/main/a.mp3" type="audio/mpeg">
+        <source src="song/a.mp3" type="audio/mpeg">
     </audio>
 
     <script>
