--- a/index.html
+++ b/index.html
@@ -506,9 +506,9 @@
     <!-- Audio Element -->
     <audio id="music" loop preload="auto" style="display: none;">
         <!-- You'll need to replace this with a web-accessible URL -->
-        <source src="C:\Users\Arezzzz\Desktop\web\a.mp3" type="audio/mpeg">
+        <source src="song/a.mp3" type="audio/mpeg">
         <!-- Fallback for local testing - replace with your file -->
-        <source src="your-audio-file.mp3" type="audio/mpeg">
+        <source src="song/a.mp3" type="audio/mpeg">
     </audio>
 
     <script>
