--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     <div class="main-content" id="mainContent">
         <!-- Video Background -->
         <video autoplay loop class="video-background" id="bgVideo">
-            <source src="C:\Users\Arezzzz\Desktop\web\e.mp4" type="video/mp4">
+            <source src="Vid/D (1).mp4" type="video/mp4">
             Your browser does not support HTML5 video.
         </video>
         <div class="video-overlay"></div>
