--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <div class="main-content">
         <!-- Video Background -->
         <video autoplay loop playsinline class="video-background" id="bgVideo">
-            <source src="C:\Users\Arezzzz\Desktop\web\D.mp4" type="video/mp4">
+            <source src="Vid/D (1).mp4" type="video/mp4">
             Your browser does not support HTML5 video.
         </video>
         <div class="video-overlay"></div>
